[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ml"
version = "0.1.0"
description = "ML data quality gate - detects corrupted images before they hurt training"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Prajwal", email = "kelsier@example.com"}
]
keywords = ["machine-learning", "data-quality", "anomaly-detection", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",  # For pretty CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
benchmark = [
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[project.urls]
Homepage = "https://github.com/kelsierlol/sentinel"
Repository = "https://github.com/kelsierlol/sentinel"
Issues = "https://github.com/kelsierlol/sentinel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
